--- a/jamovi/brawsim.a.yaml
+++ b/jamovi/brawsim.a.yaml
@@ -2285,7 +2285,7 @@ options:
       default: 0.5
       
     - name: doMeta1ABtn
-      title: 'do'
+      title: '1'
       type: Action
 
     - name: doMeta1AmBtn
@@ -2293,7 +2293,7 @@ options:
       type: Action
 
     - name: doMeta1BBtn
-      title: 'do'
+      title: '1'
       type: Action
 
     - name: doMeta1BmBtn
@@ -2301,7 +2301,7 @@ options:
       type: Action
 
     - name: doMeta1IBtn
-      title: 'do'
+      title: '1'
       type: Action
 
     - name: doMeta1ImBtn
@@ -2309,7 +2309,7 @@ options:
       type: Action
 
     - name: doMeta2ABtn
-      title: 'do'
+      title: '1'
       type: Action
     
     - name: doMeta2AmBtn
@@ -2317,7 +2317,7 @@ options:
       type: Action
 
     - name: doMeta2BBtn
-      title: 'do'
+      title: '1'
       type: Action
     
     - name: doMeta2BmBtn
@@ -2359,7 +2359,7 @@ options:
       default: 320
 
     - name: doMeta3ABtn
-      title: 'do'
+      title: '1'
       type: Action
 
     - name: doMeta3AmBtn
@@ -2367,7 +2367,7 @@ options:
       type: Action
 
     - name: doMeta3BBtn
-      title: 'do'
+      title: '1'
       type: Action
 
     - name: doMeta3BmBtn
@@ -2429,7 +2429,7 @@ options:
       default: Grow
 
     - name: doMeta4ABtn
-      title: 'do'
+      title: '1'
       type: Action
 
     - name: doMeta4AmBtn
@@ -2437,7 +2437,7 @@ options:
       type: Action
 
     - name: doMeta4BBtn
-      title: 'do'
+      title: '1'
       type: Action
 
     - name: doMeta4BmBtn
@@ -2486,7 +2486,7 @@ options:
       default: 0.9
 
     - name: doMeta5ABtn
-      title: 'do'
+      title: '1'
       type: Action
 
     - name: doMeta5AmBtn
@@ -2494,7 +2494,7 @@ options:
       type: Action
 
     - name: doMeta5BBtn
-      title: 'do'
+      title: '1'
       type: Action
 
     - name: doMeta5BmBtn
