--- a/jamovi/brawsim.a.yaml
+++ b/jamovi/brawsim.a.yaml
@@ -2523,7 +2523,7 @@ options:
       title: ""
       type: List
       options:
-      - name: rs
+      - name: rse
         title: rs
       - name: p
         title: p
