--- a/jamovi/brawsim.a.yaml
+++ b/jamovi/brawsim.a.yaml
@@ -2527,7 +2527,7 @@ options:
         title: rs
       - name: p
         title: p
-      default: rs
+      default: rse
       
     - name: metaMultiple
       title: ""
