--- a/jamovi/brawsim.a.yaml
+++ b/jamovi/brawsim.a.yaml
@@ -2422,7 +2422,7 @@ options:
       type: Number
       default: 0.5
 
-    - name: Meta3Cheating
+    - name: meta3Cheating
       title: Cheating
       type: List
       options:
@@ -2453,13 +2453,13 @@ options:
       type: Action
 
 
-    - name: Meta4SampleSize
+    - name: meta4SampleSize
       title: 'Sample size' 
       type: Number
       default: 42
 
 
-    - name: Meta4World
+    - name: meta4World
       title: 'world'
       type: List
       options:
@@ -2478,7 +2478,7 @@ options:
       type: Number
       default: 0.5
 
-    - name: Meta4SigOriginal
+    - name: meta4SigOriginal
       title: "only significant originals?"
       type: List
       options:
@@ -2488,7 +2488,7 @@ options:
           title: yes
       default: yes
 
-    - name: Meta4RepPower
+    - name: meta4RepPower
       title: power
       type: Number
       default: 0.9
@@ -2509,7 +2509,7 @@ options:
       title: '*'
       type: Action
 
-    - name: Meta5SampleGroup
+    - name: meta5SampleGroup
       title: ' '
       type: List
       options:
